<resources>
    <string name="app_name">The Movies Interest</string>
    <string name="sinopsis">sinopsis</string>
    <string name="detail">detail</string>
    <string name="ok">OK</string>
    <string name="perhatian">Perhatian</string>
    <string name="loading">Loading...</string>
    <string name="creator">Creator</string>
    <string name="cast">Cast</string>
    <string name="genre">Genre</string>
    <string name="tv_series_fragment">TV Series Netflix</string>
    <string name="tv_series_detail_fragment">Detail TV Series</string>
    <string name="season">Season</string>
    <string name="popularity">Popularity</string>
    <string name="maxteen">/10</string>
    <string name="production">Production</string>
    <string name="country">Country</string>
    <string name="overview">Overview :</string>
    <string name="homepage">HomePage :</string>
    <string name="votes">Votes</string>
    <string name="budget">Budget</string>
    <string name="not_found_review">Not Found Review</string>
    <string name="not_found_movie">Not Found Movie</string>
    <string name="sort_genre">Sort Genre</string>
    <string name="reload">Reload</string>
    <string name="sort_movie">Sorting Movies</string>
    <string name="genre_equals">Genre :</string>
    <string name="range_vote">Range Vote :</string>
    <string name="last_date">Last Date</string>
    <string name="start_date">Start Date</string>
    <string name="range_date_release">Date Release :</string>
    <string name="submit">Submit</string>
    <string name="max_vote">Max Vote </string>
    <string name="min_vote">Min Vote</string>
    <string name="search">Search</string>
    <string name="input_title_movie">Input Title Movie</string>
    <string name="cancel">Cancel</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Hariyanto Lukman</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>