<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="@dimen/margin_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_12dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_movie"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_8dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_grey_70"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_equals"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_8dp"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    android:foregroundGravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/range_date_release"
                    android:textSize="@dimen/text_18sp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margin_8dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_start_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:focusable="false"
                            android:clickable="false"
                            android:drawableRight="@drawable/arrow_down"
                            android:hint="@string/start_date"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_end_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:focusable="false"
                            android:clickable="false"
                            android:drawableRight="@drawable/arrow_down"
                            android:hint="@string/last_date"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/range_vote"
                    android:textSize="@dimen/text_18sp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tv_range_vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0-10"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_20sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/margin_8dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/min_vote"
                        android:layout_weight="2"/>
                    <SeekBar
                        android:id="@+id/seek_min"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="10"
                        android:layout_weight="0.4"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/max_vote"
                        android:layout_weight="2"/>
                    <SeekBar
                        android:id="@+id/seek_max"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="10"
                        android:progress="10"
                        android:layout_weight="0.4"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_submit_sort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/margin_20dp"/>
                    <Button
                        android:id="@+id/btn_cancel_sort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/margin_20dp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>






    </LinearLayout>

</androidx.cardview.widget.CardView>