<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_navigation"
    app:startDestination="@id/moviesFragment">


    <fragment
        android:id="@+id/detailMovieFragment"
        android:name="com.corp.luqman.movielisting.ui.fragment.DetailMovieFragment"
        android:label="Detail Movie"
        tools:layout="@layout/detail_movie_fragment" >
        <argument
            android:name="id_movie"
            app:argType="long" />
        <action
            android:id="@+id/action_detailMovieFragment_to_reviewMovieFragment"
            app:destination="@id/reviewMovieFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@id/moviesFragment"
        android:name="com.corp.luqman.movielisting.ui.fragment.MoviesPopularFragment"
        android:label="@string/popular"
        tools:layout="@layout/movies_fragment" >
        <action
            android:id="@+id/action_moviesFragment_to_detailMovieFragment"
            app:destination="@id/detailMovieFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/reviewMovieFragment"
        android:name="com.corp.luqman.movielisting.ui.fragment.ReviewMovieFragment"
        android:label="Review Movie"
        tools:layout="@layout/review_movie_fragment">
        <argument
            android:name="id_review"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@id/movieNowPlayingFragment"
        android:name="com.corp.luqman.movielisting.ui.fragment.MoviesNowPlayingFragment"
        android:label="@string/now_playing"
        tools:layout="@layout/movie_now_playing_fragment" >
        <action
            android:id="@+id/action_movieNowPlayingFragment_to_detailMovieFragment"
            app:destination="@id/detailMovieFragment" />
    </fragment>
    <fragment
        android:id="@id/movieUpcomingFragment"
        android:name="com.corp.luqman.movielisting.ui.fragment.MoviesUpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/movie_upcoming_fragment" >
        <action
            android:id="@+id/action_movieUpcomingFragment_to_detailMovieFragment"
            app:destination="@id/detailMovieFragment" />
    </fragment>
</navigation>